--- a/Project2.vcxproj
+++ b/Project2.vcxproj
@@ -110,7 +110,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\aGit\Bottles\butylki.cpp" />
+    <ClCompile Include="butylki.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
